[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fish/FishTemplate/FishTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fish/Behaviours/LungeAtBobber/LungeAtBobber.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fish/Behaviours/DetectionArea/DetectionArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fish/Behaviours/FishHitBox/FishHitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fish/BullFish/BullFish.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 173.142

[sub_resource type="CircleShape2D" id=2]
radius = 1542.49

[node name="BullFish" instance=ExtResource( 1 )]
script = ExtResource( 5 )
amount_needed_to_catch = 75.0
fish_recovery_amount = 0.0
damage = 1

[node name="CollisionShape2D" parent="KinematicBody/ProximityArea" index="0"]
shape = SubResource( 1 )

[node name="HitBox" parent="KinematicBody" index="6" instance=ExtResource( 4 )]

[node name="DetectionArea" parent="KinematicBody" index="7" instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="KinematicBody/DetectionArea" index="0"]
shape = SubResource( 2 )

[node name="LungeAtBobber" parent="KinematicBody" index="8" instance=ExtResource( 2 )]
speed = 500
num_of_lunges_before_rest = 1
radius = 2000

[editable path="KinematicBody/DetectionArea"]
[editable path="KinematicBody/LungeAtBobber"]
